--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple HTML Page</title>
+    <title>My Cloud Deployed Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple HTML page.</p>
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
+    <h1>Welcome to my cloud-deployed website!</h1>
+    <p>This site is hosted on GitHub Pages, demonstrating a simple cloud deployment.</p>
+    <script src="script.js"></script>
 </body>
 </html>
